fix previews positions and start thinking about site navigation panel

--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -1,5 +1,9 @@
 @import "~bulma/sass/utilities/_all";
 
+//@tailwind base;
+//@tailwind components;
+//@tailwind utilities;
+
 //CD5C5C
 //B0C0B2 - green
 $primary: #515b3b;
